[tool.poetry]
name = "pymicrostate"
version = "0.0.1"
description = "A Gang of Four state machine library allowing orthogonal and sub states"
authors = ["miningmanna"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
